# AI

./: README.md
abstraction/: README.md
dDeepMind/: Readme.MD  configBreakout  main.cpp  main.cu  main2.cpp  main4.cu  showUtil.py
rl/: README.md
rl/atari_agent/: README.md
rl/atari_agent/ale/: ale
rl/atari_agent/config_files/: ale_config  ale_config_format  ale_config_test  fifo_config  nn_config  nn_config_format
rl/atari_agent/data/: frameInfo1  frameInfo10  frameInfo11  frameInfo12  frameInfo13  frameInfo14  frameInfo15  frameInfo16  frameInfo17  frameInfo18  frameInfo19  frameInfo2  frameInfo20  frameInfo21  frameInfo22  frameInfo23  frameInfo24  frameInfo25  frameInfo26  frameInfo27  frameInfo28  frameInfo29  frameInfo3  frameInfo30  frameInfo31  frameInfo32  frameInfo33  frameInfo34  frameInfo35  frameInfo36  frameInfo37  frameInfo38  frameInfo39  frameInfo4  frameInfo40  frameInfo41  frameInfo42  frameInfo43  frameInfo44  frameInfo45  (+56 more)
rl/atari_agent/prac/: layer.cu  layer.h  network.cu  network.h  testing.cu
rl/atari_agent/src/: CMakeCache.txt  CMakeLists.txt  caff.cpp  caff.h  caffv2.cpp  caffv2.h  dqn.prototxt  dqn_solver.prototxt  dqn_solver2.prototxt  info.cpp  info.h  infov2.cpp  infov2.h  interface.cpp  interfacev2.cpp  interfacev2.h  main.cpp  makefile  model_iter_995000.caffemodel  ql.cpp  ql.h  ql.txt  qlv2.cpp  qlv2.h  tasksToDo  util.h
rl/atari_agent/src/inc/: cnn3.h  info.h  interface.h  ql.h  util.h
rl/atari_agent/src/src/: cnn2.cpp  cnn3.cpp  cnn_new.cu  info.cpp  interface.cpp  main.cpp  ql.cpp  ql_new.cu  tasks  util.cpp
rl/atari_agent/src2/: -L  issue  makefile  makefile~  ql.txt  sample  sampleframe  showUtil.py
rl/atari_agent/src2/inc/: caff.h  cnn3.h  cnn3.h~  cudnn_conv_layer.h  info.h  interface.h  layer.h  network.h  problems  problems~  ql.h  ql.h~  util.h  util.h~
rl/atari_agent/src2/src/: caff.cu  caffe.cpp  cnn3.cu  cnn3.cu~  comp.cu  info.cu  info.cu~  interface.cu  interface.cu~  layer.cu  main.cu  main.cu~  network.cu  ql.cu  ql.cu~  util.cu  util.cu~
rl/atari_agent/src3/: CMakeLists.txt  caff.cpp  caff.h  dqn.prototxt  dqn_solver.prototxt  interface.cpp  interface.h  interface_with_ale.cpp  interface_with_ale.h  main.cpp  ql.cpp  ql.h  util.cpp  util.h
