cmake_minimum_required (VERSION 2.6)
project(atari)

option(CPU_ONLY "Use CPU only for Caffe" OFF)
option(USE_CUDNN "Use cuDNN for Caffe" ON)
option(USE_SDL "Use SDL for ALE" ON)

include_directories(~/dqn/all_libs/include)
include_directories(~/dqn/caffe-dqn/include)
include_directories(~/ale_0.4.4/ale_0_4/src)
include_directories(/usr/local/include)
include_directories(/usr/include)
link_directories(~/dqn/caffe-dqn/build/lib)
link_directories(~/ale_0.4.4/ale_0_4)
link_directories(~/dqn/all_libs/lib)
link_directories(/usr/local/lib)
link_directories(/usr/lib)
link_directories(/usr/lib64)
if(USE_CUDNN)
  link_directories(~/cudnn-6.5-linux-R1)
endif()

add_executable(atari main.cpp ql.cpp util.cpp info.cpp caff.cpp interface.cpp)
set(CMAKE_CXX_COMPILER /home/student/dhruv/dqn/install/gcc-4.8.2/bin/g++4.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native")

target_link_libraries(atari caffe)
target_link_libraries(atari glog)
target_link_libraries(atari gflags)
target_link_libraries(atari ale)

if(APPLE)
  include_directories(/System/Library/Frameworks/vecLib.framework/Versions/Current/Headers)
endif()

if(USE_SDL)
  add_definitions(-D__USE_SDL)
  if(APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework Cocoa")
    target_link_libraries(atari sdl)
    target_link_libraries(atari sdl_gfx)
    target_link_libraries(atari sdl_image)
    target_link_libraries(atari sdlmain)
  else()
    target_link_libraries(atari SDL)
    target_link_libraries(atari SDL_gfx)
    target_link_libraries(atari SDL_image)
    target_link_libraries(atari SDLmain)
  endif()
endif()

if(NOT CPU_ONLY)
  include_directories(/usr/local/cuda-6.5/include)
endif()

if(CPU_ONLY)
  add_definitions(-DCPU_ONLY)
endif()

if(USE_CUDNN)
  target_link_libraries(atari cudnn)
endif()

